--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "countdown.js": "^0.0.6",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-flip-countdown": "^0.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
-    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-router": "^5.0.8",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
